--- a/project-1-Stephen491/pom.xml
+++ b/project-1-Stephen491/pom.xml
@@ -53,6 +53,13 @@
     <artifactId>gson</artifactId>
     <version>2.8.5</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-core -->
+<dependency>
+    <groupId>org.apache.tika</groupId>
+    <artifactId>tika-core</artifactId>
+    <version>1.24.1</version>
+</dependency>
+
 	
   </dependencies>
   
